--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -101,7 +101,8 @@
 
       <li class="nav-item">
         <a href="#" onclick="loadFromFile()" class="nav-link collapsed" data-bs-toggle="modal" data-bs-target="#modal">
-          <span>Load Data ...</span>
+          <i class="bi bi-filetype-csv"></i>
+          <span>Import CSV</span>
         </a>
       </li>
       <!-- <li class="nav-item">
