--- a/views/index.html
+++ b/views/index.html
@@ -66,7 +66,7 @@
 
                   <div class="pt-4 pb-2">
                     <h5 class="card-title text-center pb-0 fs-4">Login to Your Account</h5>
-                    <p class="text-center small">Enter your email & password to login</p>
+                    <p class="text-center small">Enter your username & password to login</p>
                   </div>
 
                   <form class="row g-3 needs-validation" onsubmit="login()" novalidate method="dialog">
@@ -81,9 +81,9 @@
                     </div> -->
 
                     <div class="col-12">
-                        <label for="email" class="form-label">Email</label>
-                        <input type="email" name="email" class="form-control" id="email" required>
-                        <div class="invalid-feedback">Please enter your email!</div>
+                        <label for="email" class="form-label">Username</label>
+                        <input type="text" name="email" class="form-control" id="email" required>
+                        <div class="invalid-feedback">Please enter your username!</div>
                       </div>
 
                     <div class="col-12">
