dummy data + processor + display + update

--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -134,7 +134,7 @@
                       <h5 class="ps-3 card-title">Leaves</h5>
                   </div>
 
-                  <div class="d-flex align-items-center">
+                  <div class=" align-items-center">
                     <div id="leaveStats">Unable to load leave stats.</div>
                   </div>
                 </div>
